--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "client": "cd client && npm start",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.4"
