--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4"
   },
   "type": "module"
